# packaging-publishing

./: .gitignore  mkdocs.yml  notebook.ipynb  pyproject.toml
cancer_predict/: __init__.py  app.py  streamlit_app.py
docs/: index.md
docs/cancer_predict/: cancer_model.md
test/: test_CancerModel.py
